--- a/about.css
+++ b/about.css
@@ -2,16 +2,24 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   background-color:  #112240;;
+}
+
+.a {
+  margin: 20px;
+}
+
+.child {
+  margin: 20px;
 }
 
 li, a, button {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 14px;
-  color: rgb(100, 255, 218);
+  color: rgb(100, 255, 218); 
 }
 
 
@@ -51,13 +59,18 @@ header {
    transition: all 0.6s ease 0s;
  }
 
+ .resume a, a:visited, a:active {
+  text-decoration: none;
+ }
+
  .resume:hover {
   background-color: rgb(0, 136, 169,1);
  }
 
  .logo {
    margin-right: auto;
-   transition:  all 1.5s ease 0s;
+   transition:  all 0.6s ease 0s;
+   cursor: pointer;
  }
 
  .logo a {
@@ -116,7 +129,7 @@ header {
   width: 100%;
   align-items: center;
   justify-content: space-around;
-
+  margin: 3% 0 5% 0;
 }
 
 .aboutfrontname {
@@ -125,16 +138,80 @@ header {
   font-size: 50px;
 }
 
+hr {
+  width: 20%;
+  height: 4px;
+  background-color: rgb(100, 255, 218);
+  border: none;
+  border-radius: 50px;
+  margin: auto;
+}
+
+.firstdiv {
+  display: block;
+  margin: 10%;
+  font-family: "Montserrat", sans-serif;
+}
+
+.aboutme {
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 700;
+  color: rgb(100, 255, 218);
+  margin-bottom: 5%;
+}
+
+p {
+  color: white;
+}
+
+
 @media (max-width: 1024px) {
 
   .aboutfrontname {
     font-size: 30px;
   }
+
+  .background {
+    background-image: url("profileimg.jpeg");
+    position:relative;
+    width: 350px;
+    height: 350px;
+    background-size: cover;
+    border-radius: 50%;
+    margin-top: 40px;
+    margin-left: 0px;
+  }
+
+  .layer {
+    width: 350px;
+    height: 350px;
+    opacity: 50%;
+    border-radius: 50%;
+    transition: all 1s ease 0.5s;
+    }
+
+   
   
 }
 
 
  @media( max-width: 800px) {
+  * {
+    box-sizing: border-box;
+    margin: 0px;
+    padding:   0px;
+    background-color:  #112240;;
+  }
+
+  .a {
+    margin: 40px;
+  }
+  
+  .child {
+    margin: 40px;
+  }
+  
 
   .toggle-button {
     display: flex;
@@ -163,6 +240,8 @@ header {
     display: flex;
   }
 
+  
+
   .background {
     background-image: url("profileimg.jpeg");
     position:relative;
@@ -185,8 +264,8 @@ header {
 
   .aboutheader {
     display: block;
-    width: 80%;
-    margin: 70px;
+    width: 100%;
+    margin-top: 80px;
   }
 
   .aboutfrontname {
@@ -195,15 +274,27 @@ header {
     font-size: 25px;
     margin-top: 50px;
     }
-
-
-@media( max-width: 800px) {
-
-
   
-  
-
- 
-
 
  }
+
+@media (max-width: 430px) {
+
+  * {
+    box-sizing: border-box;
+    margin: 10px;
+    padding: 10px;
+    background-color:  #112240;;
+  }
+  
+.a {
+  margin: 40px;
+  padding: 20px;
+}
+
+.child {
+  margin: 40px;
+  padding: 20px;
+}
+}
+ 
