--- a/style.css
+++ b/style.css
@@ -1,49 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 
-html {
-  background-color:  #112240;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+body {
+    background-color: #f5f5f5;
+    height: 100%;
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-img {
+.a , .child {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#profilepic {
   height:120px;
   width:120px;
-  position: relative;
-  top: -50px;
   border-radius: 50%;
+  position:relative;
+  top: -30%;
+}
+
+#subject {
+  text-align: center;
 }
 
 .a {
-  display: flex;
-  justify-content: center;
-  position: relative;
+    height: 100vh;
+    flex-direction: column;
+    background-color:  #112240;
 }
 
 p {
   display:contents;
+  position: relative;
 }
 
 .child {
-  margin: 0 auto;
-  width: 400px;
-  height: 470px;
-  background-color: whitesmoke;
+  width: 53vh;
+  height: 62vh;
+  flex-direction: column;
+
   /* Center vertically */
-  position: absolute;
-  top: 50%;
-  margin-top: 150px;
-  margin-bottom: 200px;
   background-color: #0a192f;
-  padding: 0px;
-  color: dro;
+  border-radius: 50px;
+
 }
 
 #title {
   color:  rgb(100, 255, 218) !important;
   text-align: center;
   justify-content: center;
-  margin-top: -5px;
   font-size: 30px;
 }
 
@@ -53,17 +61,14 @@ p {
   justify-content: center;
 }
 
-p {
-  text-align: justify;
+.menu, #para {
   color: #ccd6f6;
 }
 
 .menu {
   display: inline-block;
-  position: relative;
-  bottom: 0px;
-  margin: 30px;
-  padding-bottom: 0px;
+  margin: 20px;
+  padding-bottom: 40px;
 }
 
 .menu a:hover {
@@ -82,19 +87,12 @@ p {
 
 .child, img, p  {
   transition: ease-in-out;
-  transition-duration: 1s;
+  transition-duration: 1.5s;
   transition-timing-function: ease-in-out;
-}
-
-.footer {
-  background-color:  #112240;
-  
-  text-align: right;
 }
 
 a {
   color:  rgb(100, 255, 218) !important;
   text-decoration: none;
 }
-
 
